modified index.htm $ added style.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<title>The cloud training </title>
 </head>
 <body>
-	<h1>Cloud AWS Training</h2>
+	<h1>UPDATED Cloud AWS Training</h2>
 	<p>Get Expert AWS</p>
 	<h2>CONTINUE TRAINING </h2>
+	<p>Email: helloemail.com</p>
 </body>
 </html>
 
