--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCKTYPE html>
 <html>
 <head>
-	<title>The cloud training </title>
+	<title>The cloud training -AWS Training BY PRAVIN MISHRA</title>
 </head>
 <body>
 	<h1>UPDATED Cloud AWS Training</h2>
